--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./client/styles.css">
-  <title>Japanese Knife Store</title>
-</head>
-<body>
-  <div id="root"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./client/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
 
-  <!-- script for webpack and webpack-dev-server challenge -->
-  <!-- <script src="./client/styles.css"></script> -->
+    <title>Japanese Knife Store</title>
+  </head>
+  <body>
+    <div id="root"></div>
 
-
-</body>
+    <!-- script for webpack and webpack-dev-server challenge -->
+    <!-- <script src="./client/styles.css"></script> -->
+  </body>
 </html>
